--- a/projects/MIR/404.html
+++ b/projects/MIR/404.html
@@ -226,6 +226,7 @@
 <script src="/js/plugins/vue.js"></script>
 <script src="/js/vendor.min.js"></script>
 <script src="/js/plugins/jquery.formstyler.min.js"></script>
+<script src="/js/plugins/device.js"></script>
 <script src="/js/main.min.js"></script>
 </body>
 </html>
