--- a/projects/MIR/clentsEvent.html
+++ b/projects/MIR/clentsEvent.html
@@ -59,138 +59,141 @@
             <div class="t-bars"></div>
         </div>
     </header>
-    <div class="t-wrapper t-mainContentWrapper t-clients t-defaultP t-flex">
-        <main class="t-insideMain">
-            <div class="t-mobileSubMenuHolder t-none">
-                <select class="t-mobileSubMenu"></select>
-            </div>
-            <div class="t-clientWrapperSection">
-                <h1 class="t-middleTitle t-containersTitleControl">События</h1>
-                <div class="t-eventCardHolder">
-                    <div class="t-eventCardImgOnce">
-                        <img src="/images/sergiosvision.jpg" alt="">
-                    </div>
-                    <div class="t-eventCardTitleOnceWrapper">
-                        <h1 class="t-eventCardTitleOnce t-middleText t-blackColor">На трассе М-11 в Подмосковье на майские и июньские праздники</h1>
-                    </div>
-                    <div class="t-eventCardInfoTextOnceWrapper">
-                        <p class="t-eventCardInfoTextOnce t-standardTitle t-standardTitleMidLight t-blackColor">В праздничные дни в мае и в июне стоимость проезда по головному участку трассы М-11 «Москва - Санкт-Петербург» (от Солнечногорска до МКАД) в Московской области будет изменена. Праздничные тарифы будут действовать с 30 апреля по 3 мая, с 7 по 9 мая и с 11 по 13 июня, сообщили в пресс-службе оператора участка магистрали «Северо-Западная концессионная компания». По данным оператора, в субботы, 30 апреля, 7 мая, 11 июня с 6:00 до 22:00 будет применяться тариф, соответствующий стандартной плате в субботнее время.</p>
-                    </div>
-                    <div class="t-sourceWrapper">
-                        <a href="" class="t-linkItem t-blackPrimaryColor">ati.su</a>
-                    </div>
-                    <div class="t-listOfNewsWrapper">
-                        <div class="t-listOfNewsCtrl t-flex">
-                            <div class="t-listNewsArrows t-flex">
-                                <div class="t-listNewsArrowLeft t-newsArrow">
-                                    <svg width="25" height="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_strokeArrowLeft" transform="rotate(180 12.5 2)" fill="#CCC"/><defs><path id="path0_strokeArrowLeft" d="M24.354.354a.5.5 0 0 0 0-.708l-3.182-3.182a.5.5 0 1 0-.707.708L23.293 0l-2.828 2.828a.5.5 0 1 0 .707.708L24.354.354zM0 .5h24v-1H0v1z"/></defs></svg>
+    <div class="t-divMainWrap">
+        <div class="t-frame t-groundFrame"></div>
+        <div class="t-wrapper t-mainContentWrapper t-clients t-defaultP t-flex">
+            <main class="t-insideMain">
+                <div class="t-mobileSubMenuHolder t-none">
+                    <select class="t-mobileSubMenu"></select>
+                </div>
+                <div class="t-clientWrapperSection">
+                    <h1 class="t-middleTitle t-containersTitleControl">События</h1>
+                    <div class="t-eventCardHolder">
+                        <div class="t-eventCardImgOnce">
+                            <img src="/images/sergiosvision.jpg" alt="">
+                        </div>
+                        <div class="t-eventCardTitleOnceWrapper">
+                            <h1 class="t-eventCardTitleOnce t-middleText t-blackColor">На трассе М-11 в Подмосковье на майские и июньские праздники</h1>
+                        </div>
+                        <div class="t-eventCardInfoTextOnceWrapper">
+                            <p class="t-eventCardInfoTextOnce t-standardTitle t-standardTitleMidLight t-blackColor">В праздничные дни в мае и в июне стоимость проезда по головному участку трассы М-11 «Москва - Санкт-Петербург» (от Солнечногорска до МКАД) в Московской области будет изменена. Праздничные тарифы будут действовать с 30 апреля по 3 мая, с 7 по 9 мая и с 11 по 13 июня, сообщили в пресс-службе оператора участка магистрали «Северо-Западная концессионная компания». По данным оператора, в субботы, 30 апреля, 7 мая, 11 июня с 6:00 до 22:00 будет применяться тариф, соответствующий стандартной плате в субботнее время.</p>
+                        </div>
+                        <div class="t-sourceWrapper">
+                            <a href="" class="t-linkItem t-blackPrimaryColor">ati.su</a>
+                        </div>
+                        <div class="t-listOfNewsWrapper">
+                            <div class="t-listOfNewsCtrl t-flex">
+                                <div class="t-listNewsArrows t-flex">
+                                    <div class="t-listNewsArrowLeft t-newsArrow">
+                                        <svg width="25" height="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_strokeArrowLeft" transform="rotate(180 12.5 2)" fill="#CCC"/><defs><path id="path0_strokeArrowLeft" d="M24.354.354a.5.5 0 0 0 0-.708l-3.182-3.182a.5.5 0 1 0-.707.708L23.293 0l-2.828 2.828a.5.5 0 1 0 .707.708L24.354.354zM0 .5h24v-1H0v1z"/></defs></svg>
+                                    </div>
+                                    <div class="t-listNewsArrowRight t-newsArrow">
+                                        <svg width="25" height="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_strokeArrowRight" transform="matrix(1 0 0 -1 0 4)" fill="#CCC"/><defs><path id="path0_strokeArrowRight" d="M24.354.354a.5.5 0 0 0 0-.708l-3.182-3.182a.5.5 0 1 0-.707.708L23.293 0l-2.828 2.828a.5.5 0 1 0 .707.708L24.354.354zM0 .5h24v-1H0v1z"/></defs></svg>
+                                    </div>
                                 </div>
-                                <div class="t-listNewsArrowRight t-newsArrow">
-                                    <svg width="25" height="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_strokeArrowRight" transform="matrix(1 0 0 -1 0 4)" fill="#CCC"/><defs><path id="path0_strokeArrowRight" d="M24.354.354a.5.5 0 0 0 0-.708l-3.182-3.182a.5.5 0 1 0-.707.708L23.293 0l-2.828 2.828a.5.5 0 1 0 .707.708L24.354.354zM0 .5h24v-1H0v1z"/></defs></svg>
+                                <div class="t-listNewsTextWrapper">
+                                    <span class="t-listNewsText">Список новостей</span>
                                 </div>
-                            </div>
-                            <div class="t-listNewsTextWrapper">
-                                <span class="t-listNewsText">Список новостей</span>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </main>
-        <div class="t-feedBackDialog t-dialog t-none">
-            <div class="t-dialogTitleWrapper">
-                <h2 class="t-dialogTitle t-middleText">Обратная связь</h2>
-            </div>
-            <form class="t-feedBackForm">
-                <div class="t-formName t-formItem">
-                    <label for="nameFeedBack" class="t-standardTitle t-blackPrimaryColor">Ваше имя</label>
-                    <input type="text" id="nameFeedBack" class="t-input">
+            </main>
+            <div class="t-feedBackDialog t-dialog t-none">
+                <div class="t-dialogTitleWrapper">
+                    <h2 class="t-dialogTitle t-middleText">Обратная связь</h2>
                 </div>
-                <div class="t-formEmailOrPhone t-formItem">
-                    <label for="emailOrPhoneFeedBack" class="t-standardTitle t-blackPrimaryColor">Телефон или электронная почта</label>
-                    <input type="text" id="emailOrPhoneFeedBack" class="t-input" required>
-                </div>
-                <div class="t-formEmailOrPhone t-formItem">
-                    <label for="commentOrQuestionFeedBack" class="t-standardTitle t-blackPrimaryColor">Комментарий или вопрос</label>
-                    <input type="text" id="commentOrQuestionFeedBack" class="t-input">
-                </div>
-                <button class="t-btn t-sendContactsBtn" disabled>Отправить</button>
-                <div class="t-sendingWarning">
-                    <p class="t-smallTitleLight t-blackPrimaryColor">Нажимая кнопку «Отправить» вы соглашаетесь с условиями обработки персональных данных</p>
-                </div>
-            </form>
-        </div>
-        <div class="t-makeOrderDialog t-dialog t-none">
-            <div class="t-dialogTitleWrapper">
-                <h2 class="t-dialogTitle t-middleText">Заявка</h2>
-            </div>
-            <form class="t-makeOrderForm">
-                <div class="t-formName t-formItem">
-                    <label for="services" class="t-standardTitle t-blackPrimaryColor">Услуга</label>
-                    <select id="services" class="t-selectService">
-                        <option value="default" selected disabled>Выберите</option>
-                        <option value="one">Тентованные</option>
-                        <option value="two">Изотермические</option>
-                        <option value="theree">Рефрижераторные</option>
-                        <option value="four">ЖД</option>
-                        <option value="five">Морские перевозки</option>
-                        <option value="six">Воздушные перевозки</option>
-                    </select>
-                </div>
-                <div class="t-formSendingPlace t-formItem">
-                    <label for="sendingPlace" class="t-standardTitle t-blackPrimaryColor">Место отправки</label>
-                    <input type="text" id="sendingPlace" class="t-input">
-                </div>
-                <div class="t-formDestination t-formItem">
-                    <label for="destination" class="t-standardTitle t-blackPrimaryColor">Пункт назначения</label>
-                    <input type="text" id="destination" class="t-input">
-                </div>
-                <div class="t-formDateOfLoading t-formItem">
-                    <label for="dateOfLoading" class="t-standardTitle t-blackPrimaryColor">Дата погрузки</label>
-                    <input type="text" id="dateOfLoading" class="t-input">
-                </div>
-                <div class="t-smallInputs t-flex t-flexSB">
-                    <div class="t-formWeight  t-formItem">
-                        <label for="weight" class="t-standardTitle t-blackPrimaryColor">Вес</label>
-                        <input type="text" id="weight" class="t-input">
+                <form class="t-feedBackForm">
+                    <div class="t-formName t-formItem">
+                        <label for="nameFeedBack" class="t-standardTitle t-blackPrimaryColor">Ваше имя</label>
+                        <input type="text" id="nameFeedBack" class="t-input">
                     </div>
-                    <div class="t-formScope t-formItem">
-                        <label for="scope" class="t-standardTitle t-blackPrimaryColor">Объём</label>
-                        <input type="text" id="scope" class="t-input">
+                    <div class="t-formEmailOrPhone t-formItem">
+                        <label for="emailOrPhoneFeedBack" class="t-standardTitle t-blackPrimaryColor">Телефон или электронная почта</label>
+                        <input type="text" id="emailOrPhoneFeedBack" class="t-input" required>
                     </div>
+                    <div class="t-formEmailOrPhone t-formItem">
+                        <label for="commentOrQuestionFeedBack" class="t-standardTitle t-blackPrimaryColor">Комментарий или вопрос</label>
+                        <input type="text" id="commentOrQuestionFeedBack" class="t-input">
+                    </div>
+                    <button class="t-btn t-sendContactsBtn" disabled>Отправить</button>
+                    <div class="t-sendingWarning">
+                        <p class="t-smallTitleLight t-blackPrimaryColor">Нажимая кнопку «Отправить» вы соглашаетесь с условиями обработки персональных данных</p>
+                    </div>
+                </form>
+            </div>
+            <div class="t-makeOrderDialog t-dialog t-none">
+                <div class="t-dialogTitleWrapper">
+                    <h2 class="t-dialogTitle t-middleText">Заявка</h2>
                 </div>
-                <div class="t-formNameOfCompany t-formItem">
-                    <label for="nameOfCompany" class="t-standardTitle t-blackPrimaryColor">Название компании</label>
-                    <input type="text" id="nameOfCompany" class="t-input">
-                </div>
-                <div class="t-formContactPerson t-formItem">
-                    <label for="contactPerson" class="t-standardTitle t-blackPrimaryColor">Контактное лицо</label>
-                    <input type="text" id="contactPerson" class="t-input">
-                </div>
-                <div class="t-formOrderPhone t-formItem">
-                    <label for="orderPhone" class="t-standardTitle t-blackPrimaryColor">Телефон</label>
-                    <input type="text" id="orderPhone" class="t-input">
-                </div>
-                <div class="t-formOrderEmail t-formItem">
-                    <label for="orderEmail" class="t-standardTitle t-blackPrimaryColor">Электронная почта</label>
-                    <input type="text" id="orderEmail" class="t-input">
-                </div>
-                <div class="t-formOrderComment t-formItem">
-                    <label for="orderComment" class="t-standardTitle t-blackPrimaryColor">Комментарий к заявке</label>
-                    <input type="text" id="orderComment" class="t-input">
-                </div>
-                <button class="t-btn t-sendOrderBtn" disabled>Отправить</button>
-                <div class="t-sendingWarning">
-                    <p class="t-smallTitleLight t-blackPrimaryColor">Нажимая кнопку «Отправить» вы соглашаетесь с условиями обработки персональных данных</p>
-                </div>
-            </form>
+                <form class="t-makeOrderForm">
+                    <div class="t-formName t-formItem">
+                        <label for="services" class="t-standardTitle t-blackPrimaryColor">Услуга</label>
+                        <select id="services" class="t-selectService">
+                            <option value="default" selected disabled>Выберите</option>
+                            <option value="one">Тентованные</option>
+                            <option value="two">Изотермические</option>
+                            <option value="theree">Рефрижераторные</option>
+                            <option value="four">ЖД</option>
+                            <option value="five">Морские перевозки</option>
+                            <option value="six">Воздушные перевозки</option>
+                        </select>
+                    </div>
+                    <div class="t-formSendingPlace t-formItem">
+                        <label for="sendingPlace" class="t-standardTitle t-blackPrimaryColor">Место отправки</label>
+                        <input type="text" id="sendingPlace" class="t-input">
+                    </div>
+                    <div class="t-formDestination t-formItem">
+                        <label for="destination" class="t-standardTitle t-blackPrimaryColor">Пункт назначения</label>
+                        <input type="text" id="destination" class="t-input">
+                    </div>
+                    <div class="t-formDateOfLoading t-formItem">
+                        <label for="dateOfLoading" class="t-standardTitle t-blackPrimaryColor">Дата погрузки</label>
+                        <input type="text" id="dateOfLoading" class="t-input">
+                    </div>
+                    <div class="t-smallInputs t-flex t-flexSB">
+                        <div class="t-formWeight  t-formItem">
+                            <label for="weight" class="t-standardTitle t-blackPrimaryColor">Вес</label>
+                            <input type="text" id="weight" class="t-input">
+                        </div>
+                        <div class="t-formScope t-formItem">
+                            <label for="scope" class="t-standardTitle t-blackPrimaryColor">Объём</label>
+                            <input type="text" id="scope" class="t-input">
+                        </div>
+                    </div>
+                    <div class="t-formNameOfCompany t-formItem">
+                        <label for="nameOfCompany" class="t-standardTitle t-blackPrimaryColor">Название компании</label>
+                        <input type="text" id="nameOfCompany" class="t-input">
+                    </div>
+                    <div class="t-formContactPerson t-formItem">
+                        <label for="contactPerson" class="t-standardTitle t-blackPrimaryColor">Контактное лицо</label>
+                        <input type="text" id="contactPerson" class="t-input">
+                    </div>
+                    <div class="t-formOrderPhone t-formItem">
+                        <label for="orderPhone" class="t-standardTitle t-blackPrimaryColor">Телефон</label>
+                        <input type="text" id="orderPhone" class="t-input">
+                    </div>
+                    <div class="t-formOrderEmail t-formItem">
+                        <label for="orderEmail" class="t-standardTitle t-blackPrimaryColor">Электронная почта</label>
+                        <input type="text" id="orderEmail" class="t-input">
+                    </div>
+                    <div class="t-formOrderComment t-formItem">
+                        <label for="orderComment" class="t-standardTitle t-blackPrimaryColor">Комментарий к заявке</label>
+                        <input type="text" id="orderComment" class="t-input">
+                    </div>
+                    <button class="t-btn t-sendOrderBtn" disabled>Отправить</button>
+                    <div class="t-sendingWarning">
+                        <p class="t-smallTitleLight t-blackPrimaryColor">Нажимая кнопку «Отправить» вы соглашаетесь с условиями обработки персональных данных</p>
+                    </div>
+                </form>
+            </div>
+            <aside class="t-rightAside">
+                <ul class="t-simpleRightSideMenu t-mainList t-flex t-flexColumn t-right">
+                    <li class="active"><a href="/clients.html">События</a></li>
+                    <li><a href="/documents.html">Документы</a></li>
+                </ul>
+            </aside>
         </div>
-        <aside class="t-rightAside">
-            <ul class="t-simpleRightSideMenu t-mainList t-flex t-flexColumn t-right">
-                <li class="active"><a href="/clients.html">События</a></li>
-                <li><a href="/documents.html">Документы</a></li>
-            </ul>
-        </aside>
     </div>
     <footer>
         <div class="t-footerTop t-flex t-flexSB t-white">
@@ -261,6 +264,7 @@
 <script src="/js/plugins/vue.js"></script>
 <script src="/js/vendor.min.js"></script>
 <script src="/js/plugins/jquery.formstyler.min.js"></script>
+<script src="/js/plugins/device.js"></script>
 <script src="/js/main.min.js"></script>
 </body>
 </html>
