--- a/projects/MIR/index.html
+++ b/projects/MIR/index.html
@@ -254,11 +254,11 @@
                         <input type="text" id="orderWeight" class="t-input">
                     </div>
                     <div class="t-gridItem t-formItem">
-                        <label for="orderScope" class="t-standardTitle t-blackPrimaryColor">Объём</label>
+                        <label for="orderScope" class="t-standardTitle t-blackPrimaryColor t-notNecessary">Объём</label>
                         <input type="text" placeholder="Необязательно" id="orderScope" class="t-input">
                     </div>
                     <div class="t-gridItem t-formItem">
-                        <label for="orderCompanyName" class="t-standardTitle t-blackPrimaryColor">Название компании</label>
+                        <label for="orderCompanyName" class="t-standardTitle t-blackPrimaryColor t-notNecessary">Название компании</label>
                         <input type="text" placeholder="Необязательно" id="orderCompanyName" class="t-input">
                     </div>
                     <div class="t-gridItem t-formItem">
@@ -274,8 +274,8 @@
                         <input type="text" id="orderEmail" class="t-input">
                     </div>
                     <div class="t-gridItem t-formItem">
-                        <label for="orderRequestComment" class="t-standardTitle t-blackPrimaryColor">Комментарий к заявке</label>
-                        <input type="text" id="orderRequestComment" class="t-input">
+                        <label for="orderRequestComment" class="t-standardTitle t-blackPrimaryColor t-notNecessary">Комментарий к заявке</label>
+                        <input type="text" placeholder="Необязательно" id="orderRequestComment" class="t-input">
                     </div>
 
                 </div>
@@ -291,6 +291,7 @@
     <script src="/js/plugins/vue.js"></script>
     <script src="/js/vendor.min.js"></script>
     <script src="/js/plugins/jquery.formstyler.min.js"></script>
+    <script src="/js/plugins/device.js"></script>
     <script src="/js/main.min.js"></script>
   </body>
 </html>
